2005-11-17  Michal Nazarewicz  (mina86/AT/tlen.pl)

	* check.sh: + chec.sh -> check.sh in --help screen

2005-11-16  Michal Nazarewicz  (mina86/AT/tlen.pl)

	* mp3rip: New file
	* Makefile, README, TODO: + mp3rip added

	* Makefile: + now searches also in lib64 for X libraries

	* installkernel: + patching no longer supported
	+ --output option removed (need some more testing)
	+ unsets $KBUILD_OUTPUT to prevent (possible) errors
	+ --bootdir and prefix argument support added
	+ $INSTALL_PATH support added
	+ --update-symlinks removed (now included in --install-kernel)
	+ signal handler moved up to the beginning of file
	+ backup() function removed (was used only in 1 place)
	+ update_build() function removed (was used only in 1 place)
	+ script calls itself with full path and 'sh' to prevent u
	+ added cheking for libraries in lib64 directories
	+ few small bugs fixed
	* installkernel.8: + patching description removed
	+ --output, --update-symlink and --symlinks options removed
	+ --bootdir option added
	+ prefix description added
	+ update-symlinks hook removed
	+ examples including patching removed

2005-10-11  Michal Nazarewicz  (mina86/AT/tlen.pl)

	* installkernel: + small bug fixed

	* installkernel, installkernel.8: + --output argument added

2005-10-09  Michal Nazarewicz  (mina86/AT/tlen.pl)

	* installkernel: + now uses $(id -un) instead of $USER
	+ bug fixed: when exited with EC and raproted it as command's EC
	+ bug fixed: --update-symlink -> --update-symlinks

2005-09-22  Michal Nazarewicz  (mina86/AT/tlen.pl)

	* tpwd: New file
	* Makefile, README: + tpwd added

	* LICENSE: + a bit rewritten

	* extractlinks.pl, getlyrics.pl, pingrange.pl: New file
	* Makefile, README, TODO:
	+ extractlinks.pl, getlyrics.pl, pingrange.pl added

2005-09-16  Michal Nazarewicz  (mina86/AT/tlen.pl)

	* README: + rewriten a bit (again)

2005-09-04  Michal Nazarewicz  (mina86/AT/tlen.pl)

	* README: + a bit rewriten

2005-09-03  Michal Nazarewicz  (mina86/AT/tlen.pl)
