@@ -22,3 +22,4 @@ tinyapps*.tgz
 the-book-of-mozilla
 tuptime
 umountiso
+xgetclass
