@@ -1,6 +1,6 @@
 
                      Tiny Applications Collection
-                     $Date: 2005/11/16 20:54:12 $
+                     $Date: 2005/11/20 20:18:13 $
 
 Tiny Applications Collection is a set of small programs, shell scripts
 and other  things which  may be usefull  in everyday life.   There are
@@ -140,8 +140,13 @@ At the moment the collection includes:
    uptimes)  and biggest  uptime.   Might be  used  as replacement  to
    standard uptime utility;
 
- * xcolor2rgb  -  Reads from  argument  list  (or  from STDIN,  if  no
+ * xcolor2rgb  -  reads from  argument  list  (or  from STDIN,  if  no
    arguments are given) and prints apropriate RGB value to STDOUT.
+
+ * xgetclass - prints window's application name and class as returned
+   by XGetClassHint.  May be used in some kind of shell scripts but
+   honestly I just wrote it to test XGetClassHint function and since I
+   did it I decided to include it in tinyapps :)
 
 More  documentation about  each  utility is  usually  provided in  the
 source  code  or  utility's   README  file  which  is  usually  called
