@@ -1,3 +1,8 @@
+2005-11-20  Michal Nazarewicz  (mina86/AT/tlen.pl)
+
+	* xgetclass.c: New file
+	* Makefile, README: + xgetclass added
+
 2005-11-17  Michal Nazarewicz  (mina86/AT/tlen.pl)
 
 	* check.sh: + chec.sh -> check.sh in --help screen
